themes up to date in trunk, gary custom module up to date in trunk

--- a/sites/all/themes/custom/fairbanks_center/fairbanks-center.css
+++ b/sites/all/themes/custom/fairbanks_center/fairbanks-center.css
@@ -171,14 +171,14 @@ div.biblio-authors {
 
 /* LAYOUT */
 
-#sidebar-left {
+#sidebar-first {
   width: 160px;
   right: 232px;
   margin-left: -100%;
   padding:0;
   }
 
-#sidebar-right {
+#sidebar-second {
   padding: 58px 48px 0 0;
   width: 175px;
   margin-right: -295px;
@@ -195,16 +195,16 @@ div.biblio-authors {
 
 /* LEFT SIDEBAR */
 
-#sidebar-left .block {
+#sidebar-first .block {
   padding-bottom: 1em;
   }
 
-#sidebar-left #block-vsite_menus-0 {
+#sidebar-first #block-vsite_menus-0 {
   padding-bottom: 96px;
   background: url('images/seal.jpg') no-repeat 34px 100%;
   }
 
-#sidebar-left li, #sidebar h3.title {
+#sidebar-first li, #sidebar h3.title {
   padding: 4px 0 0 34px;
   border-bottom:1px solid #B3C4C2;
   margin-bottom: 5px;
@@ -218,19 +218,19 @@ div.biblio-authors {
   font-weight: normal;
   }
 
-#sidebar-left li a, #sidebar-left li a:visited {
+#sidebar-first li a, #sidebar-first li a:visited {
   color: #b00921;
   font-weight: bold;
   }
 
 /* RIGHT SIDEBAR */
 
-#sidebar-right .region-count-1 {
+#sidebar-second .region-count-1 {
   border-top:1px solid #B3C4C2;
   padding-top: 6px
   }
 
-#sidebar-right h3.title {
+#sidebar-second h3.title {
   margin: 0 0 16px 0;
   padding: 0;
   color:#666;
