--- a/sites/all/themes/custom/leap/leap.css
+++ b/sites/all/themes/custom/leap/leap.css
@@ -51,9 +51,9 @@ a, a:visited {
   height: 83px;
   }
 
-#sidebar-left {
+#sidebar-first {
   padding-bottom: 220px;
-  background: url(images/sidebar-left.jpg) 0 100% no-repeat #e4e2e0;
+  background: url(images/sidebar-first.jpg) 0 100% no-repeat #e4e2e0;
   border-top: 3px solid #fff;
   padding-top: 0;
   }
