--- a/sites/all/themes/custom/openscholar/openscholar.css
+++ b/sites/all/themes/custom/openscholar/openscholar.css
@@ -137,7 +137,7 @@ body.page-home #content-main {
   padding: 0;
   }
 
-#content-main #content, #sidebar-right .block .content {
+#content-main #content, #sidebar-second .block .content {
   background: #fff;
   padding: 30px;
   }
@@ -298,11 +298,11 @@ body.page-home #content-wrapper #content, body.page-home #content-wrapper .colum
   padding: 22px;
   }
 
-#content-wrapper #sidebar-right {
+#content-wrapper #sidebar-second {
   padding-left: 0;
   }
 
-#content-wrapper #sidebar-left {
+#content-wrapper #sidebar-first {
   padding-right: 0;
   }
 
@@ -310,7 +310,7 @@ body.page-home #content-wrapper #content, body.page-home #content-wrapper .colum
   padding-right: 266px;
   }
 
-#content-wrapper #sidebar-left {
+#content-wrapper #sidebar-first {
   background:#F2F3F3;
   border-right: 1px solid #BFC6C6;
   }
