--- a/sites/all/themes/custom/psr/psr.css
+++ b/sites/all/themes/custom/psr/psr.css
@@ -14,11 +14,11 @@ body {
   height: 43px;
   }
 
-#sidebar-left {
+#sidebar-first {
   background:#f6f7d7;
   }
 
-#sidebar-right {
+#sidebar-second {
   background:#efefef;
   }
 
@@ -26,11 +26,11 @@ h2.title, h3.title {
   color: #000;
   }
 
-#sidebar-left h3 {
+#sidebar-first h3 {
   background: #e4e8bd;
   }
 
-#sidebar-right h3 {
+#sidebar-second h3 {
   background: #b7bec1;
   }
 
