--- a/sites/all/themes/custom/ptr/ptr.css
+++ b/sites/all/themes/custom/ptr/ptr.css
@@ -8,12 +8,12 @@ body {
   font-family:"helvetica neue",helvetica, Arial,sans-serif;
   }
 
-body.sidebar-left {
-  background-image: url(images/body-sidebar-left.png);
+body.sidebar-first {
+  background-image: url(images/body-sidebar-first.png);
   }
 
-body.sidebar-right {
-  background-image: url(images/body-sidebar-right.png);
+body.sidebar-second {
+  background-image: url(images/body-sidebar-second.png);
   }
 
 body.two-sidebars {
@@ -25,12 +25,12 @@ body.two-sidebars {
   background: url(images/wrapper-no-sidebars.png) no-repeat 50% 0 transparent;
   }
 
-body.sidebar-left #wrapper {
+body.sidebar-first #wrapper {
   background-image: url(images/wrapper-left-sidebar.png);
   }
 
-body.sidebar-right #wrapper {
-  background-image: url(images/wrapper-sidebar-right.png);
+body.sidebar-second #wrapper {
+  background-image: url(images/wrapper-sidebar-second.png);
   }
 
 body.two-sidebars #wrapper {
@@ -42,12 +42,12 @@ body.two-sidebars #wrapper {
   min-width:900px;
   }
 
-body.sidebar-left #footer {
-  background-image: url(images/footer-sidebar-left.png);
+body.sidebar-first #footer {
+  background-image: url(images/footer-sidebar-first.png);
   }
 
-body.sidebar-right #footer {
-  background-image: url(images/footer-sidebar-right.png);
+body.sidebar-second #footer {
+  background-image: url(images/footer-sidebar-second.png);
   }
 
 body.two-sidebars #footer {
@@ -92,12 +92,12 @@ body.two-sidebars #footer {
   left: 0;
   height: 50px;
   padding: 0;
-  background: url(images/footer-sidebar-right.png) repeat-y 50% 0 #fff;
+  background: url(images/footer-sidebar-second.png) repeat-y 50% 0 #fff;
   text-align: center;
   }
 
-body.sidebar-left #footer, body.no-sidebars #footer {
-  background-image: url(images/footer-no-sidebar-right.png);
+body.sidebar-first #footer, body.no-sidebars #footer {
+  background-image: url(images/footer-no-sidebar-second.png);
   }
 
 /*TYPOGRAPHY*/
@@ -152,7 +152,7 @@ p.copy {
   margin-top: 20px;
   }
 
-.sidebar-right p.copy {
+.sidebar-second p.copy {
   margin-right: 179px;
   }
 
@@ -188,17 +188,17 @@ p.copy a, p.copy a:visited {
 
 /* SIDEBARS */
 
-#sidebar-left, #sidebar-right, #header-left, #header-right {
+#sidebar-first, #sidebar-second, #header-left, #header-right {
   padding: 11px 0;
   }
 
 
-#header-left, #sidebar-left {
+#header-left, #sidebar-first {
   margin-left:-100%;
   right:260px;
   }
 
-#sidebar-right .block, #sidebar-left .block {
+#sidebar-second .block, #sidebar-first .block {
   padding: 0 0 16px 0;
   }
 
@@ -213,7 +213,7 @@ p.copy a, p.copy a:visited {
   font-weight:bold;
   }
 
-#sidebar-left #block-vsite_menus-0 {
+#sidebar-first #block-vsite_menus-0 {
   padding-left:0;
   padding-right: 0;
   }
@@ -239,20 +239,20 @@ p.copy a, p.copy a:visited {
 
 /* SIDEBAR RIGHT*/
 
-#sidebar-right {
+#sidebar-second {
   padding-top: 30px;
   }
 
 
-#sidebar-right a, #sidebar-right a:visited, #sidebar-right h3, #sidebar-right p {
+#sidebar-second a, #sidebar-second a:visited, #sidebar-second h3, #sidebar-second p {
   padding-left: 16px;
   }
 
-#sidebar-right h3 {
+#sidebar-second h3 {
   color: #699bae;
   }
 
-#sidebar-right li {
+#sidebar-second li {
   list-style: none;
   margin-left: 0;
   }
