--- a/sites/all/themes/custom/rbates/rbates.css
+++ b/sites/all/themes/custom/rbates/rbates.css
@@ -39,12 +39,12 @@ a:hover {
     }
 
 
-h1, h2, h3, #sidebar-right a, #navbar, #header {
+h1, h2, h3, #sidebar-second a, #navbar, #header {
     font-weight: normal;
     }
 
 
-h1 a, h2 a, h3 a, #sidebar-right a {
+h1 a, h2 a, h3 a, #sidebar-second a {
     font-style: bold;
     }
 
@@ -60,7 +60,7 @@ h2.title {
 
 /* LAYOUT ELEMENTS */
 
-#sidebar-left {
+#sidebar-first {
    width: 168px;
    right: 198px;
     }
@@ -87,7 +87,7 @@ h2.title {
   padding-left: 100px;
   }
 
-#sidebar-right {
+#sidebar-second {
     border-left: 1px solid #ccc;
     }
 
