--- a/sites/all/themes/custom/scholar_jwe/scholar-jwe.css
+++ b/sites/all/themes/custom/scholar_jwe/scholar-jwe.css
@@ -1,7 +1,7 @@
 body {
 
     color:#4F5047;
- 
+
     }
 
 
@@ -23,7 +23,7 @@ h2, h3, h4 {
   font-weight:normal;
   font-family:Georgia, "Times New Roman", Times, serif;
   font-style:italic;
-  
+
   }
 
 body.page-home h2.title {
@@ -37,14 +37,14 @@ body.page-home h2.title {
   font-size: .8em;
   }
 
-#sidebar-right {
+#sidebar-second {
   color: #555;
 
   }
-  
 
 
-#sidebar-right h3.title, #sidebar-left h3.title, #sidebar-left #block-vsite_menus-0 li a {
+
+#sidebar-second h3.title, #sidebar-first h3.title, #sidebar-first #block-vsite_menus-0 li a {
 	font-family: Georgia, "Times New Roman", Times, serif;
 	font-style: italic;
 	font-weight:bold;
@@ -52,14 +52,14 @@ padding-bottom:8px;
 font-size:1.3em;
   }
 
-#sidebar-right li a, #sidebar-left li a {
+#sidebar-second li a, #sidebar-first li a {
 color:#446677;
 font-size:.9em;
 font-weight:normal;
 text-decoration:underline;
 }
 
-#sidebar-right li a, #sidebar-left li a:visited{
+#sidebar-second li a, #sidebar-first li a:visited{
 	font-color:#da2b00!important;
 	}
 
@@ -81,11 +81,11 @@ p.copy {
 	background-color: #666;
 	background-image: url(images/container_bg.png);
 	background-repeat: repeat-y;
-	background-position: 0 0;	
+	background-position: 0 0;
   }
 
 
-#sidebar-left, #sidebar-right {
+#sidebar-first, #sidebar-second {
   font-size: .8em;
   line-height: 1.1em;
 
@@ -95,25 +95,25 @@ p.copy {
  #content-wrapper {
 	padding-left: 245px;
 	padding-right: 250px;
-	
+
   }
-  
+
 body.page-home  #content-wrapper {
 	padding-left: 245px;
 	padding-right: 250px !important;
 }
 
-#sidebar-left .block, #sidebar-right .block {
+#sidebar-first .block, #sidebar-second .block {
 
 margin-bottom:0!important;}
 
 
 
 
-  
+
 #content-wrapper {
 	overflow: hidden;
-	
+
 
   }
 
@@ -121,7 +121,7 @@ margin-bottom:0!important;}
 margin-top:0px;
 padding:0;
 }
-#sidebar-right {
+#sidebar-second {
 color:#555555;
 
 
@@ -130,11 +130,11 @@ color:#555555;
 	background-color:#ffffff!important;
 	padding-top:30px!important;
    }
-   
 
 
 
-  
+
+
 #content-wrapper {
 background-position: 0;
 background-image: url(images/bg_bottom.png);
@@ -154,15 +154,15 @@ p.copy a.poweredby {
 
 /* SIDEBAR ELEMENTS */
 
-#sidebar-right, #sidebar-left {
+#sidebar-second, #sidebar-first {
   font-size: 1em;
   line-height: 1.2em;
   }
-  
-  #sidebar-right a:hover, #sidebar-left a:hover {
+
+  #sidebar-second a:hover, #sidebar-first a:hover {
 	  color:#DC6700;}
 
-#sidebar-right a, #sidebar-right a:visited, #sidebar-left a, #sidebar-left a:visited {
+#sidebar-second a, #sidebar-second a:visited, #sidebar-first a, #sidebar-first a:visited {
   color: #DC6700;
   }
 
@@ -273,7 +273,7 @@ padding:3px 17px 3px 22px;
 
   }
 
-#sidebar-left #block-vsite_menus-0 li a, #sidebar-left #block-vsite_menus-0 li a:visited {
+#sidebar-first #block-vsite_menus-0 li a, #sidebar-first #block-vsite_menus-0 li a:visited {
   color: #7e9f06;
   border: none;
   display:block;
@@ -281,7 +281,7 @@ padding:3px 17px 3px 22px;
   padding-top: 2px;
   }
 
-#sidebar-left #block-vsite_menus-0 li a:hover {
+#sidebar-first #block-vsite_menus-0 li a:hover {
   text-decoration:none;
   background: #485616;
   color:#fff;
@@ -297,7 +297,7 @@ margin-top:10px;
   height: 59px;
   display:none;
   }
-  
+
 
 
 /* MAIN CONTENT AREA */
@@ -311,7 +311,7 @@ margin-top:10px;
   border-bottom: 1px solid #a1b1b1;
   display:block;
   }
-  
+
 
 
 
@@ -326,7 +326,7 @@ padding-left:8px;
 padding-top:0 !important;
 padding-bottom:50px !important;
 }
-	
+
 div#header-right ul.menu {
 font-size:12px;
 
@@ -338,18 +338,18 @@ text-decoration:none;
 color:#fff;}
 
 
-div#sidebar-left .block, div#sidebar-right .block{
+div#sidebar-first .block, div#sidebar-second .block{
 	border:bottom:1px solid red;
 }
 
-#sidebar-left .block, #sidebar-right .block {
+#sidebar-first .block, #sidebar-second .block {
 border-bottom:1px solid #DB6600;
 padding-bottom:5px;
 width:200px;
 clear:both!important;
 padding-left:8px;
 }
-	
+
 #content-main h3 {
 border-top:1px solid #DB6600;
 padding-bottom:10px;
@@ -361,7 +361,7 @@ color:#DB6600;
 	color:#DB6600;
 	font-size:20px;
 	padding-bottom:10px;}
-	
+
 #content-main ul li {
 list-style-position:inside;
 list-style-type:circle;
@@ -371,14 +371,14 @@ padding-left:15px;
 
 #content-main a:link, #content-main a:visited{
 	text-decoration:underline!important;}
-#header-left, #header-right, #sidebar-left, #sidebar-right {
+#header-left, #header-right, #sidebar-first, #sidebar-second {
 width:192px;
 }
 
 div.views-field-field-gallery-image-fid img:hover {
  background-color: #cedfe7!important;
   }
-  
+
   div.views-field-field-gallery-image-fid img {
 background-color:#FFFFFF;
 border:1px solid #ADADAD!important;
@@ -389,12 +389,12 @@ padding:4px;
 div.view-scholar-image-gallery{
 	display:inline!important;
 }
-	
+
 
 div#content-main #content{
 	padding-right:25px!important;
 	}
-	
+
 	#content .node .view-scholar-image-gallery ul li, .node-type-gallery #content .node .content ul li, .block .view-scholar-image-gallery li.views-row {
 clear:none;
 float:left;
@@ -405,7 +405,7 @@ padding:0;
 div#block-views-scholar_image_gallery-block_1{
 	border-bottom:none!important;}
 
-	
+
 div#header-right a{
 padding:3px!important;
   font-weight:bold;}
@@ -465,6 +465,6 @@ border-top:none;
 
 }
 
-body.sidebar-right #content-wrapper {
+body.sidebar-second #content-wrapper {
 padding-left:25px!important;
 }
