--- a/sites/all/themes/custom/thedata/thedata.css
+++ b/sites/all/themes/custom/thedata/thedata.css
@@ -73,29 +73,29 @@ body.header-main #header-main {
 	color: #fff;
 	}
 
-#sidebar-right h3.title, #sidebar-left h3.title {
+#sidebar-second h3.title, #sidebar-first h3.title {
 	color:#C55B28;
 	}
 
-#sidebar-right li a, #sidebar-left li a {
+#sidebar-second li a, #sidebar-first li a {
 	color: #0C54B3;
 	}
 
-#sidebar-right ul.menu li, #sidebar-left ul.booktoc li {
+#sidebar-second ul.menu li, #sidebar-first ul.booktoc li {
 	padding: 2px 0;
 	line-height: 1.5em;
 	}
 
-#sidebar-right ul.menu li a, #sidebar-left ul.booktoc li a {
+#sidebar-second ul.menu li a, #sidebar-first ul.booktoc li a {
 	display: block;
 	border-bottom: 1px dotted #ccc;
 	}
 
-#sidebar-left ul.booktoc a.active {
+#sidebar-first ul.booktoc a.active {
 	font-weight: bold;
 	}
 
-#sidebar-left li.booktoc ul.booktoc li a {
+#sidebar-first li.booktoc ul.booktoc li a {
 	padding-left: 1em;
 	}
 
