--- a/sites/all/themes/custom/gking/gking-ie-7.css
+++ b/sites/all/themes/custom/gking/gking-ie-7.css
@@ -1,3 +1,3 @@
-body.two-sidebars #sidebar-left {
+body.two-sidebars #sidebar-first {
 	left: 364px; /* Total width, including padding of right col */
 	}
