--- a/sites/all/themes/custom/ptr/ptr-ie7.css
+++ b/sites/all/themes/custom/ptr/ptr-ie7.css
@@ -1,12 +1,12 @@
-#header, #sidebar-left, #sidebar-right {
+#header, #sidebar-first, #sidebar-second {
   display:inline;
   }
 
-#sidebar-left {
+#sidebar-first {
   left: 372px !important;
   }
 
-#sidebar-left li, #sidebar-left li a {
+#sidebar-first li, #sidebar-first li a {
   width: 164px;
   }
 
