latest changes - did not commit properly last time

--- a/sites/all/themes/openscholar/scholar_base/css/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/css/scholar-base.css
@@ -64,9 +64,11 @@ img {
   width: 75px;
   }
 
-#scholar-shield img {
-  /* themers can change the size of the shields without uploading new images */
+#scholar-shield img,
+#logo img {
+  /* themers can change the size of the shields and logo without uploading new images */
   max-width: 100%;
+  max-height: 100%;
    }
 
 /* TOP OPENSCHOLAR ADMIN BAR */
