--- a/sites/all/themes/openscholar/scholar_base/css/typography.css
+++ b/sites/all/themes/openscholar/scholar_base/css/typography.css
@@ -119,7 +119,9 @@ p.copy a.poweredby  {
   text-indent:-999em;
   display:block;
   width:145px;
-  height:23px;
+  height:26px;
+  text-decoration: none !important;
+  border: none !important;
   }
 
 p.copy a.poweredby:hover {
