added new rule: .search-form .spelling-suggestions label {   display: block; }

--- a/sites/all/themes/openscholar/scholar_base/css/forms.css
+++ b/sites/all/themes/openscholar/scholar_base/css/forms.css
@@ -102,6 +102,10 @@ select option {
 .search-form label{
   display:none;
   }
+  
+.search-form .spelling-suggestions label {
+  display: block;
+  }
 
 .search-form .container-inline {
   background: url(../images/searchglass.gif) no-repeat 100% 0;
