change to fairbanks center theme

--- a/sites/all/themes/custom/fairbanks_center/fairbanks-center.css
+++ b/sites/all/themes/custom/fairbanks_center/fairbanks-center.css
@@ -30,7 +30,7 @@ body {
 h2, h3 {
 	font-size: 13px;
 	font-weight: bold;
-	line-height: 18px;
+	line-height: 25px;
 	margin: 32px 0 16px 0;
 	color: #666666;
 	padding-top: 6px;
@@ -40,13 +40,14 @@ h2, h3 {
 h3 {
 	color:  #B00921;
 	margin-bottom: -4px;
+	line-height: 20px;
 	padding-top: 0;
 	border: none;
 	}
 
 h4 {
 	font-size: 13px;
-	line-height: 16px;
+	line-height: 20px;
 	margin-top: 32px;
 	margin-bottom: -4px;
 	}
@@ -61,17 +62,25 @@ li {
 
 a {
 	text-decoration: none;
-	color: #00A49B;
+	color: #b00921;
 	}
 
 a:hover {
-	text-decoration: underline;
-	color: #00A49B;
+	text-decoration: none;
+	color: #b00921;
+	}
+
+a:visited {
+	text-decoration: none;
+	color: #b00921;
 	}
 
 a img {
 	border: none;
 	}
+
+.term-head {
+	color: #b00921;
 
 #header-main,
 #block-scholar_project-1 h1,
