current changes to admin theme

--- a/sites/all/themes/openscholar/cp_theme/css/cp-theme.css
+++ b/sites/all/themes/openscholar/cp_theme/css/cp-theme.css
@@ -1,6 +1,10 @@
 body.openscholar-admin,#page {
-  background: #fff;
+  background: #dfe1e3;
   color:#5a5959;
+  }
+
+#page {
+  background: #fff;
   }
 
 .innerframe .view-display-id-default form {
@@ -129,8 +133,18 @@ p {
   margin-bottom: 1em;
   }
 
+table {
+  border: none;
+  }
+
 table td, table th {
   padding: 8px;
+  }
+
+table th {
+  border: none;
+  background-color: #fff;
+  padding-bottom: 1px;
   }
 
 table th {
@@ -140,10 +154,11 @@ table th {
   color: #666;
   }
 
+/*
 tr.odd {
   background-color: #f3f3f3;
   }
-
+*/
 
 /* SPECIFIC PAGE VIEWS */
 
