current cp theme changes

--- a/sites/all/themes/openscholar/cp_theme/css/cp-theme.css
+++ b/sites/all/themes/openscholar/cp_theme/css/cp-theme.css
@@ -7,6 +7,10 @@ body.openscholar-admin,#page {
   background: #fff;
   }
 
+#page .page-content {
+  overflow:hidden;
+  }
+
 .innerframe .view-display-id-default form {
   margin: 0 0 1.5em 0;
   }
