--- a/sites/all/themes/openscholar/cp_theme/css/typography.css
+++ b/sites/all/themes/openscholar/cp_theme/css/typography.css
@@ -11,6 +11,13 @@ body, input, textarea, select  {
   text-shadow: none;
   }
 
+#page-title .page-title span.icon {
+  background: url(../images/glasses.png) no-repeat 0 50% transparent;
+  height: 30px;
+  width:93px;
+  margin-right: 10px;
+  }
+
 h2 {
   font-size: 1.3em;
   line-height:1.083em;
@@ -23,6 +30,7 @@ h2.title {
 h2.with-tabs {
   margin-bottom: .3em;
   }
+
 
 .section-admin h2.title {
   background: url(../images/admin-logo.png) no-repeat 0 50% transparent;
