latest cp changes

--- a/sites/all/themes/openscholar/cp_theme/css/admin-toolbar.css
+++ b/sites/all/themes/openscholar/cp_theme/css/admin-toolbar.css
@@ -50,6 +50,12 @@
   background-position: 0 -167px;
   }
 
+div#admin-toolbar div.admin-blocks {
+  background: #9fadba;
+  -moz-box-shadow: 0 .2em 3em #000;
+  -webkit-box-shadow: 0 .2em 3em #000;
+  box-shadow: 0 1em 2em #000;
+  }
 
 /* HORIZONTAL */
 
