--- a/sites/all/themes/openscholar/cp_theme/css/cp-theme.css
+++ b/sites/all/themes/openscholar/cp_theme/css/cp-theme.css
@@ -221,3 +221,44 @@ tr.odd {
 #main-content #cp-content .frame, #main-content #cp-content .innerframe {
   position: static;
   }
+
+/* MESSAGES */
+
+div.messages {
+  background:#BBDDFF;
+  border:1px solid #AACCEE;
+  color:#003366;
+  margin:0 0 10px;
+  padding:9px;
+  clear:both;
+  -moz-border-radius: 0;
+  -webkit-border-radius: 0;
+  -border-radius: 0;
+  -moz-box-shadow: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  }
+
+div.status {
+  background:#CCFF88;
+  border:1px solid #BBEE77;
+  color:#336600;
+  margin:0 0 10px;
+  padding:9px;
+  }
+
+div.warning {
+  background: #FFEE66;
+  border:1px solid #EEDD55;
+  color:#884400;
+  margin:0 0 10px;
+  padding:9px;
+  }
+
+div.error {
+  background:#EE6633;
+  border:1px solid #DD5522;
+  color:#FFFFFF;
+  margin:0 0 10px;
+  padding:9px;
+  }
