--- a/sites/all/themes/openscholar/cp_theme/css/forms.css
+++ b/sites/all/themes/openscholar/cp_theme/css/forms.css
@@ -115,6 +115,10 @@ input.form-autocomplete, input.form-text, textarea.form-textarea, select.form-se
   }
 
 
+div.form-radios .form-item {
+  float: left;
+  }
+
 /* DRAGGABLE AREAS */
 
 
