--- a/sites/all/themes/openscholar/cp_theme/css/modal.css
+++ b/sites/all/themes/openscholar/cp_theme/css/modal.css
@@ -6,9 +6,6 @@
   top: 0 !important;
   }
 
-#modalBackdrop {
-  background: blue;
-  }
 div.ctools-modal-content {
   color: #000;
   padding: 20px 0 0 25px;
@@ -28,10 +25,11 @@ div.ctools-modal-content {
   }
 
 div.ctools-modal-content .modal-title {
-  font-size: 120%;
+  font-size: 110%;
   font-weight: bold;
   overflow: hidden;
   white-space: nowrap;
+  color: #adb6bf;
 }
 
 div.ctools-modal-content .modal-header {
@@ -44,7 +42,7 @@ div.ctools-modal-content .modal-header a {
 }
 
 div.ctools-modal-content .modal-content {
-  padding: 1em 1em 0 1em;
+  padding: 12px 12px 0 12px;
   overflow: auto;
   width: 575px;
   height: 400px;
