mostly features modal changes

--- a/sites/all/themes/openscholar/cp_theme/css/cp-theme.css
+++ b/sites/all/themes/openscholar/cp_theme/css/cp-theme.css
@@ -224,6 +224,13 @@ tr.odd {
   position: static;
   }
 
+.page-content .form-item .description {
+  right:0;
+  color: #222;
+  background-image: url("../images/popup.png");
+  border-top-color: #90acc7;
+  }
+
 /* MESSAGES */
 
 div.messages {
