--- a/sites/all/themes/openscholar/cp_theme/css/typography.css
+++ b/sites/all/themes/openscholar/cp_theme/css/typography.css
@@ -432,7 +432,9 @@ a.delete {
 
 /* BUTTONS */
 
-input.form-submit, input.form-button, button {
+input.form-submit,
+input.form-button, button,
+#modalContent a.close {
   background: url(../images/button.png) repeat-x 0 0 #e8e8e8;
   color: #000;
   border: 1px solid #c4c4c4;
