latest cp theme

--- a/sites/all/themes/openscholar/cp_theme/css/tabs.css
+++ b/sites/all/themes/openscholar/cp_theme/css/tabs.css
@@ -1,5 +1,5 @@
 ul.primary-tabs {
-  bottom: 12px;
+  bottom: 0;
   }
 
 ul.primary-tabs li {
@@ -28,9 +28,8 @@ ul.primary-tabs li a.active:link,
 ul.primary-tabs li a.active:visited,
 ul.primary-tabs li.active a:hover,
 ul.primary-tabs li.active a:focus  {
-  background: #8898A9;
-  color: #fff;
-  padding: 4px 9px;
+  background: #fff;
+  padding: 4px 9px 12px 9px;
   -moz-border-radius: 0;
   -webkit-border-radius: 0;
   border-radius: 0;
