latest cp theme

--- a/sites/all/themes/openscholar/cp_theme/css/typography.css
+++ b/sites/all/themes/openscholar/cp_theme/css/typography.css
@@ -9,6 +9,7 @@ body, input, textarea, select  {
   line-height: 44px;
   min-height: 44px;
   text-shadow: none;
+  padding-bottom: 0;
   }
 
 #page-title .page-title span.icon {
@@ -126,7 +127,7 @@ a.context-button:hover {
   }
 
 a#help-toggler {
-  bottom: 24px;
+  bottom: 12px;
   }
 
 .form-required {
