moving modal bits to vsite cp module

--- a/sites/all/themes/openscholar/cp_theme/css/forms.css
+++ b/sites/all/themes/openscholar/cp_theme/css/forms.css
@@ -91,13 +91,8 @@ div.description {
 	line-height: 127%;
 	}
 
-div.fieldset, fieldset, .container-inline-date {
-  background: transparent;
-  }
-
 fieldset {
   border: none;
-  /*border-bottom: 1px solid #ccc;*/
   }
 
 fieldset fieldset, #views-bulk-operations-select fieldset {
@@ -152,6 +147,11 @@ div.spaces-block-customizer {
   border: none;
   margin:0;
   padding: 0;
+  }
+
+#edit-field-presentation-date-0-value-datepicker-popup-0-wrapper,
+#edit-field-presentation-date-0-value-wrapper{
+  padding:0;
   }
 
 /* DRAGGABLE AREAS */
