--- a/sites/all/themes/openscholar/scholar_base/css/typography.css
+++ b/sites/all/themes/openscholar/scholar_base/css/typography.css
@@ -364,11 +364,13 @@ a.delete {
   }
 
 .empty-content {
-  clear: both;
-  }
-
-.empty-content p {
-  float: left;
+  text-align: right;
+  background: url(../images/add-your-first.png) no-repeat 100% 0 transparent;
+  padding: 31px 18px 0 18px;
+  height: 33px;
+  line-height: 23px;
+  float:right;
+  color: #fff;
   }
 
 .show-content-type {
