fix for publications admin links, latest style changes to scholar base and cp

--- a/sites/all/themes/openscholar/scholar_base/css/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/css/scholar-base.css
@@ -248,12 +248,12 @@ div.terms {
   float: right;
   width: 51px;
   text-align: right;
-  display:none;
+  opacity: .6;
   margin-right: 10px;
   }
 
 .node:hover .os-links {
-  display:block;
+  opacity:1;
   }
 
 .node.os-links-trail {
