--- a/sites/all/themes/openscholar/scholar_base/css/typography.css
+++ b/sites/all/themes/openscholar/scholar_base/css/typography.css
@@ -370,7 +370,9 @@ a.delete {
   height: 33px;
   line-height: 23px;
   float:right;
+  clear:right;
   color: #fff;
+  margin-top: 4px;
   }
 
 .show-content-type {
