--- a/sites/all/themes/openscholar/scholar_base/css/dropdown.css
+++ b/sites/all/themes/openscholar/scholar_base/css/dropdown.css
@@ -141,6 +141,7 @@ html.js div.ctools-dropdown div.ctools-dropdown-container {
   background: url(../images/admin-link.png) 0 3px no-repeat transparent;
   padding: 0 0 0 20px !important;
   font-size: 11px;
+  font-family: 'helvetica neue', helvetica, arial, sans-serif;
   }
 
 a.ctools-dropdown-link:hover {
