changes to cp forms

--- a/sites/all/themes/openscholar/cp_theme/css/forms.css
+++ b/sites/all/themes/openscholar/cp_theme/css/forms.css
@@ -33,6 +33,10 @@ fieldset {
   padding: 0 9px;
   }
 
+.form-item-labeled {
+  clear:both;
+  }
+
 .block .block-content,
 .container-inline .fieldset-content,
 .fieldset-content {
