--- a/sites/all/themes/openscholar/scholar_base/css/scholar-base.css
+++ b/sites/all/themes/openscholar/scholar_base/css/scholar-base.css
@@ -248,12 +248,13 @@ div.terms {
   float: right;
   width: 51px;
   text-align: right;
-  opacity: .6;
-  margin-right: 10px;
+  display: none;
+  margin-right: 5px;
+  padding-left: 5px;
   }
 
 .node:hover .os-links {
-  opacity:1;
+  display:block;
   }
 
 .node.os-links-trail {
